# drf_simple

./: .gitignore  pyproject.toml  requirements.txt
todos/: settings.py
