[tool.poetry]
name = "drf_simple"
version = "0.1.0"
description = ""
authors = ["valvandor <sincov.vitalii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
